Dosya düzenleme
dosya düzenlemesi yaptım